tests/invalid/nested_class.rk
class nested_class_test {
    class foo {

    }

    @main
    static def main() {

    }
}